[tool.poetry]
name = "exam"
version = "0.1.0"
description = ""
authors = ["Alessio Carachino <alessio.carachino.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
