[tool.poetry]
name = "quarto-ci-2022-2023"
version = "0.1.0"
description = ""
authors = ["Peipi98 <39802340+Peipi98@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "quarto_ci_2022_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
